selfhost/test/lexer/floats_error_extra_period.out
Error at %FILE_NAME%:1:4
Unexpected character '.':
  |  1.2.3
        ^